myPA2/cool.output
Terminals unused in grammar

   ERROR


State 130 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: /* empty */
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID ':' TYPEID optimal_assign ';'
   11        | error ';'

   12 optimal_assign: /* empty */
   13               | ASSIGN expression

   14 formal_list: /* empty */
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expression_list1: /* empty */
   19                 | expression
   20                 | expression_list1 ',' expression

   21 expression_list2: expression ';'
   22                 | expression_list2 expression ';'
   23                 | error ';'

   24 let_expression: OBJECTID ':' TYPEID IN expression
   25               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID ':' TYPEID ',' let_expression
   27               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   28               | error ',' let_expression

   29 case: OBJECTID ':' TYPEID DARROW expression ';'

   30 case_list: case
   31          | case_list case

   32 expression: OBJECTID ASSIGN expression
   33           | expression '.' OBJECTID '(' expression_list1 ')'
   34           | expression '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   35           | OBJECTID '(' expression_list1 ')'
   36           | IF expression THEN expression ELSE expression FI
   37           | WHILE expression LOOP expression POOL
   38           | '{' expression_list2 '}'
   39           | LET let_expression
   40           | CASE expression OF case_list ESAC
   41           | NEW TYPEID
   42           | ISVOID expression
   43           | expression '+' expression
   44           | expression '-' expression
   45           | expression '*' expression
   46           | expression '/' expression
   47           | '~' expression
   48           | expression '<' expression
   49           | expression LE expression
   50           | expression '=' expression
   51           | NOT expression
   52           | '(' expression ')'
   53           | OBJECTID
   54           | INT_CONST
   55           | STR_CONST
   56           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 33 34 35 52
')' (41) 9 33 34 35 52
'*' (42) 45
'+' (43) 43
',' (44) 16 20 26 27 28
'-' (45) 44
'.' (46) 33 34
'/' (47) 46
':' (58) 9 10 17 24 25 26 27 29
';' (59) 4 5 6 9 10 11 21 22 23 29
'<' (60) 48
'=' (61) 50
'@' (64) 34
'{' (123) 4 5 9 38
'}' (125) 4 5 9 38
'~' (126) 47
error (256) 6 11 23 28
CLASS (258) 4 5
ELSE (259) 36
FI (260) 36
IF (261) 36
IN (262) 24 25
INHERITS (263) 5
LET (264) 39
LOOP (265) 37
POOL (266) 37
THEN (267) 36
WHILE (268) 37
CASE (269) 40
ESAC (270) 40
OF (271) 40
DARROW (272) 29
NEW (273) 41
ISVOID (274) 42
STR_CONST (275) 55
INT_CONST (276) 54
BOOL_CONST (277) 56
TYPEID (278) 4 5 9 10 17 24 25 26 27 29 34 41
OBJECTID (279) 9 10 17 24 25 26 27 29 32 33 34 35 53
ASSIGN (280) 13 25 27 32
NOT (281) 51
LE (282) 49
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11, on right: 8
optimal_assign (51)
    on left: 12 13, on right: 10
formal_list (52)
    on left: 14 15 16, on right: 9 16
formal (53)
    on left: 17, on right: 15 16
expression_list1 (54)
    on left: 18 19 20, on right: 20 33 34 35
expression_list2 (55)
    on left: 21 22 23, on right: 22 38
let_expression (56)
    on left: 24 25 26 27 28, on right: 26 27 28 39
case (57)
    on left: 29, on right: 30 31
case_list (58)
    on left: 30 31, on right: 31 40
expression (59)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56, on right: 9 13 19 20 21 22 24 25 27 29 32
    33 34 36 37 40 42 43 44 45 46 47 48 49 50 51 52


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error . ';'

    ';'  shift, and go to state 6


state 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


state 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


state 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


state 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


state 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


state 15

   11 feature: error . ';'

    ';'  shift, and go to state 20


state 16

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   10        | OBJECTID . ':' TYPEID optimal_assign ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


state 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


state 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


state 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


state 20

   11 feature: error ';' .

    $default  reduce using rule 11 (feature)


state 21

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


state 22

   10 feature: OBJECTID ':' . TYPEID optimal_assign ';'

    TYPEID  shift, and go to state 28


state 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


state 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


state 26

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


state 27

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 28

   10 feature: OBJECTID ':' TYPEID . optimal_assign ';'

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 12 (optimal_assign)

    optimal_assign  go to state 34


state 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 30

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


state 31

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 36


state 32

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


state 33

   13 optimal_assign: ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


state 34

   10 feature: OBJECTID ':' TYPEID optimal_assign . ';'

    ';'  shift, and go to state 53


state 35

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 36

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 54


state 37

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 38

   36 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 55


state 39

   39 expression: LET . let_expression

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_expression  go to state 58


state 40

   37 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 59


state 41

   40 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 60


state 42

   41 expression: NEW . TYPEID

    TYPEID  shift, and go to state 61


state 43

   42 expression: ISVOID . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 62


state 44

   55 expression: STR_CONST .

    $default  reduce using rule 55 (expression)


state 45

   54 expression: INT_CONST .

    $default  reduce using rule 54 (expression)


state 46

   56 expression: BOOL_CONST .

    $default  reduce using rule 56 (expression)


state 47

   32 expression: OBJECTID . ASSIGN expression
   35           | OBJECTID . '(' expression_list1 ')'
   53           | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 53 (expression)


state 48

   51 expression: NOT . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 65


state 49

   47 expression: '~' . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66


state 50

   38 expression: '{' . expression_list2 '}'

    error       shift, and go to state 67
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression_list2  go to state 68
    expression        go to state 69


state 51

   52 expression: '(' . expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 70


state 52

   13 optimal_assign: ASSIGN expression .
   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 13 (optimal_assign)


state 53

   10 feature: OBJECTID ':' TYPEID optimal_assign ';' .

    $default  reduce using rule 10 (feature)


state 54

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 80


state 55

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   36           | IF expression . THEN expression ELSE expression FI
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


state 56

   28 let_expression: error . ',' let_expression

    ','  shift, and go to state 82


state 57

   24 let_expression: OBJECTID . ':' TYPEID IN expression
   25               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID . ':' TYPEID ',' let_expression
   27               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 83


state 58

   39 expression: LET let_expression .

    $default  reduce using rule 39 (expression)


state 59

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   37           | WHILE expression . LOOP expression POOL
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LOOP  shift, and go to state 84
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


state 60

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   40           | CASE expression . OF case_list ESAC
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    OF   shift, and go to state 85
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


state 61

   41 expression: NEW TYPEID .

    $default  reduce using rule 41 (expression)


state 62

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   42           | ISVOID expression .
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 42 (expression)


state 63

   32 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 86


state 64

   35 expression: OBJECTID '(' . expression_list1 ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 18 (expression_list1)

    expression_list1  go to state 87
    expression        go to state 88


state 65

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression
   51           | NOT expression .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 51 (expression)


state 66

   33 expression: expression . '.' OBJECTID '(' expression_list1 ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' expression_list1 ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   47           | '~' expression .
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 47 (expression)


state 67

   23 expression_list2: error . ';'

    ';'  shift, and go to state 89


state 68

   22 expression_list2: expression_list2 . expression ';'
   38 expression: '{' expression_list2 . '}'
